--- a/config/locales/simple_form/zh-CN.yml
+++ b/config/locales/simple_form/zh-CN.yml
@@ -1,4 +1,26 @@
 zh-CN:
   simple_form:
-    signup:
-      email: 邮箱地址
+    hints:
+      signup:
+        password: 至少六个字符，区分大小写
+    placeholders:
+      signup:
+        email: 例如：user@example.com
+        mobile: 请输入真实手机号码
+        password: 请设置登录密码
+        password_confirmation: 请再次输入密码
+        contactor: 请填写真实姓名，作为下单联系人或收货人用
+        address: 作为收货地址
+    labels:
+      signup:
+        email: 邮箱地址
+        mobile: 手机号码
+        password: 登录密码
+        password_confirmation: 确认密码
+        company_name: 公司名称
+        contactor: 联系人
+        qq: QQ号码
+        phone: 电话号码
+        fax: 传真号码
+        address: 收货地址
+        submit: 立即注册
