--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -2,9 +2,13 @@ zh-CN:
   company: 广东青阳科技 |
   signup: 用户注册
   signin: 登录
+  create_order: 在线下单
+  order_label:  创建新的订单
+  order_info: 开始创建您的新订单，并在线计算价格，确认订单
   PCB: 正瀚PCB
   account: 我的帐号
   profile: 账户信息
+  home: 首页
   settings: 账户设置
   signout: 注销
   foot_com: 青阳科技 2014
@@ -14,3 +18,13 @@ zh-CN:
   create_info: 这里将注册您在本网站使用各项服务所需要的账号，为了交易安全顺利，请您尽量填写完整信息。请妥善保存您的帐号和密码
   signin_label: 登录我的帐户
   signin_info: 现在登录，开始下单
+  edit_user: 修改用户资料
+  nav:
+    home: 首页
+    order: 在线下单
+    news: 热点新闻
+    company: 公司简介
+    contact: 联系我们
+  user:
+    update_profile_succ: 用户资料更新成功
+    singin_notice: 请先登录
